test/typeCheckTest/pass/test25.ic
class BinExprTest {
	void main (string [] args) {
		int x = 0;
		int y = 1;
		int z = 3 + 4;
		boolean test1, test2, test3, test4;
		
		test1 = x + 2 >= y - 3;
		test2 = z * x * 2 == y / x + 4;
		test3 = test1 && x + y - z * 5 / y != z % x - 2;
		test4 = z * y / x + 2 * z > x % z + y || test3 && !(x + z < 5/y);
	}
}