test/typeCheckTest/fail/test28.ic
class BadMod {
	void main (string [] args) {
		int [] x = null % 4;
	}
}